--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -2,9 +2,9 @@ name: Build Workflow
 
 on:
   workflow_dispatch:
-    inputs:
-    tags:
-    description: 'test build'
+#    inputs:
+#    tags:
+#    description: 'test build'
   # release:
   #   types: [ published ]
 
@@ -19,11 +19,11 @@ jobs:
         python-version: '3.9'
     - run: |
         python -m pip install --upgrade pip
-    - run: |
         python -m pip install -r requirements.txt
-    - run: |
         python -m pip install pyinstaller
-    - run: .\compile_iorsim.bat
+        curl.exe -o upx-3.96-win64.zip https://github.com/upx/upx/releases/download/v3.96
+        7z e upx-3.96-win64.zip
+        .\compile_iorsim.bat
     - uses: actions/upload-artifact@v3
       with:
         name: IORSim_GUI.exe
