--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -17,18 +17,20 @@ jobs:
       run: curl.exe -LJO https://github.com/upx/upx/releases/download/v3.96/upx-3.96-win64.zip
     - name: Unzip
       run: 7z e upx-3.96-win64.zip
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-    - name: Prepare Python
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt
-        python -m pip install pyinstaller
-    - name: Compile
-      run: .\compile_iorsim.bat
-    - uses: actions/upload-artifact@v3
-      with:
-        name: IORSim_GUI
-        path: dist/IORSim_GUI.exe
+    - name: Dir
+      run: dir 
+    # - uses: actions/checkout@v3
+    # - uses: actions/setup-python@v4
+    #   with:
+    #     python-version: '3.9'
+    # - name: Prepare Python
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     python -m pip install -r requirements.txt
+    #     python -m pip install pyinstaller
+    # - name: Compile
+    #   run: .\compile_iorsim.bat
+    # - uses: actions/upload-artifact@v3
+    #   with:
+    #     name: IORSim_GUI
+    #     path: dist/IORSim_GUI.exe
