--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -15,21 +15,21 @@ jobs:
     steps:
     - name: Download UPX
       run: curl.exe -LJO https://github.com/upx/upx/releases/download/v3.96/upx-3.96-win64.zip
-    - name: Unzip
+    - name: Unzip UPX
       run: 7z x upx-3.96-win64.zip
+    - uses: actions/checkout@v3
+    - uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+    - name: Prepare Python
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install -r requirements.txt
+        python -m pip install pyinstaller
+    - name: Compile
+      run: .\compile_iorsim.bat
     - name: Dir
       run: dir 
-    # - uses: actions/checkout@v3
-    # - uses: actions/setup-python@v4
-    #   with:
-    #     python-version: '3.9'
-    # - name: Prepare Python
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     python -m pip install -r requirements.txt
-    #     python -m pip install pyinstaller
-    # - name: Compile
-    #   run: .\compile_iorsim.bat
     # - uses: actions/upload-artifact@v3
     #   with:
     #     name: IORSim_GUI
