--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -2,35 +2,32 @@ name: Build Workflow
 
 on:
   workflow_dispatch:
-#    inputs:
-#    tags:
-#    description: 'test build'
-  # release:
-  #   types: [ published ]
+  release:
+    types: [ published ]
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - name: Download UPX
-      run: curl.exe -LJO https://github.com/upx/upx/releases/download/v3.96/upx-3.96-win64.zip
-    - name: Unzip UPX
-      run: 7z x upx-3.96-win64.zip
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     - name: Prepare Python
       run: |
-        python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
         python -m pip install pyinstaller
+    - name: Download UPX
+      run: curl.exe -LJO https://github.com/upx/upx/releases/download/v3.96/upx-3.96-win64.zip
+    - name: Unzip UPX
+      run: 7z x upx-3.96-win64.zip
     - name: Compile
       run: .\compile_iorsim.bat
     - name: Dir
       run: dir 
-    # - uses: actions/upload-artifact@v3
-    #   with:
-    #     name: IORSim_GUI
-    #     path: dist/IORSim_GUI.exe
+    # - name: Upload Asset
+    #   run: |
+    #     curl -X POST -H "Accept: application/vnd.github+json" \
+    #       -H "Authorization: token <TOKEN>" \
+    #       https://uploads.github.com/repos/OWNER/REPO/releases/${{ github.event.release.tag_name }}/assets
