--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -27,7 +27,8 @@ jobs:
     # - name: Dir
     #   run: dir 
     - name: Upload Asset
-      run: |
-        curl -X POST -H "Accept: application/vnd.github+json" \
-          -H "Authorization: token <TOKEN>" \
-          https://uploads.github.com/repos/janlv/IORSim_GUI/releases/${{ github.event.release.tag_name }}/assets
+      run: gh release upload ${{ github.event.release.tag_name }} dist/IORSim_GUI.exe
+      # run: |
+      #   curl -X POST -H "Accept: application/vnd.github+json" \
+      #     -H "Authorization: token <TOKEN>" \
+      #     https://uploads.github.com/repos/janlv/IORSim_GUI/releases/${{ github.event.release.tag_name }}/assets
