update build action

--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -5,6 +5,9 @@ on:
   release:
     types: [ published ]
 
+env:
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   build:
     runs-on: windows-latest
