--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -7,11 +7,14 @@ on:
 
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  UPX_URL: https://github.com/upx/upx/releases/download/v3.96
 
 jobs:
   build:
-    runs-on: windows-latest
-
+    strategy:
+      matrix:
+        os: [ windows-latest, ubuntu-latest ]
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
@@ -21,17 +24,29 @@ jobs:
       run: |
         python -m pip install -r requirements.txt
         python -m pip install pyinstaller
-    - name: Download UPX
-      run: curl -LJO https://github.com/upx/upx/releases/download/v3.96/upx-3.96-win64.zip
-    - name: Unzip UPX
-      run: 7z x upx-3.96-win64.zip
+    - name: Download UPX and unzip on windows
+      if: startsWith(matrix.os, 'windows')
+      env: 
+        FILE: upx-3.96-win64.zip
+      run: |
+        echo "ASSET=IORSim_GUI.exe#'Windows executable'" >> $GITHUB_ENV
+        curl -LJO ${{env.UPX_URL}}/${{env.FILE}}
+        7z x ${{env.FILE}}
+    - name: Download UPX and unzip on linux
+      if: startsWith(matrix.os, 'linux')
+      env:
+        FILE: upx-3.96-amd64_linux.tar.xz
+      run: |
+        echo "ASSET=IORSim_GUI#'Linux executable'" >> $GITHUB_ENV
+        wget ${{env.UPX_URL}}/${{env.FILE}}
+        tar -xf ${{env.FILE}}
     - name: Compile
-      run: .\compile_iorsim.bat
-    # - name: Dir
-    #   run: dir 
+      run: |
+        mv upx-* upx
+        pyinstaller.exe --onefile    \
+          --add-data "guides;guides" \
+          --add-data "icons;icons"   \
+          --upx-dir "upx" \
+          .\IORSim_GUI.py
     - name: Upload Asset
-      run: gh release upload ${{ github.event.release.tag_name }} dist/IORSim_GUI.exe
-      # run: |
-      #   curl -X POST -H "Accept: application/vnd.github+json" \
-      #     -H "Authorization: token <TOKEN>" \
-      #     https://uploads.github.com/repos/janlv/IORSim_GUI/releases/${{ github.event.release.tag_name }}/assets
+      run: gh release upload ${{ github.event.release.tag_name }} dist/${{env.ASSET}}
