--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -8,6 +8,11 @@ on:
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   UPX_URL: https://github.com/upx/upx/releases/download/v3.96
+  APP_NAME: IORSim_GUI
+
+defaults:
+  run:
+    shell: bash
 
 jobs:
   build:
@@ -25,30 +30,30 @@ jobs:
       run: |
         python -m pip install -r requirements.txt
         python -m pip install pyinstaller
-    - name: Download UPX and unzip
+    - name: Download UPX, unzip and build
       run: |
         if [ "$RUNNER_OS" == "Windows" ]; then
-          echo "ASSET=IORSim_GUI.exe#'Windows executable'" >> $GITHUB_ENV
+          EXE=.exe
           FILE=upx-3.96-win64
           EXT=zip
-          #curl -LJO ${{env.UPX_URL}}/$FILE.$EXT
-          #7z x $FILE.$EXT
+          SEP=";"
+          curl -LJO ${{env.UPX_URL}}/$FILE.$EXT
+          7z x $FILE.$EXT
         elif [ "$RUNNER_OS" == "Linux" ]; then
-          echo "ASSET=IORSim_GUI#'Linux executable'" >> $GITHUB_ENV
           FILE=upx-3.96-amd64_linux
           EXT=tar.xz
-          #wget ${{env.UPX_URL}}/$FILE.$EXT
-          #tar -xfv $FILE.$EXT
+          SEP=":"
+          wget ${{env.UPX_URL}}/$FILE.$EXT
+          tar -xfv $FILE.$EXT
         else 
           echo "$RUNNER_OS not supported"
           exit 1
         fi
-        wget ${{env.UPX_URL}}/$FILE.$EXT
-        tar -xvf $FILE.$EXT
-        mv -v $FILE upx
-      shell: bash
-    - name: Compile
-      run: |
-        pyinstaller.exe --onefile --add-data "guides;guides" --add-data "icons;icons" --upx-dir "upx" .\IORSim_GUI.py
+        pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --upx-dir $FILE IORSim_GUI.py
+        echo "ASSET=$APP_NAME$EXE#'$RUNNER_OS executable'" >> $GITHUB_ENV
+
+    # - name: Compile
+    #   run: |
+    #     pyinstaller.exe --onefile --add-data "guides;guides" --add-data "icons;icons" --upx-dir "upx" .\IORSim_GUI.py
     - name: Upload Asset
       run: gh release upload ${{ github.event.release.tag_name }} dist/${{env.ASSET}}
