--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         python -m pip install -r requirements.txt
         python -m pip install pyinstaller
-    - name: Download UPX, unzip and build
+    - name: Download UPX, unzip and build bundle
       run: |
         if [ "$RUNNER_OS" == "Windows" ]; then
           EXE=.exe
@@ -44,12 +44,12 @@ jobs:
           EXT=tar.xz
           SEP=":"
           wget ${{env.UPX_URL}}/$FILE.$EXT
-          tar -xfv $FILE.$EXT
+          tar -xvf $FILE.$EXT
         else 
           echo "$RUNNER_OS not supported"
           exit 1
         fi
-        pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --upx-dir $FILE IORSim_GUI.py
+        pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --upx-dir "$FILE" IORSim_GUI.py
         echo "ASSET=$APP_NAME$EXE#'$RUNNER_OS executable'" >> $GITHUB_ENV
 
     # - name: Compile
