--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -50,6 +50,9 @@ jobs:
           exit 1
         fi
         pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --upx-dir "$FILE" IORSim_GUI.py
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          chmod u+x $APP_NAME
+        fi
         echo "ASSET=$APP_NAME$EXE#'$RUNNER_OS executable'" >> $GITHUB_ENV
     - name: Upload Asset
       run: gh release upload ${{ github.event.release.tag_name }} dist/${{env.ASSET}}
