--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 env:
   APP_NAME: IORSim_GUI
   UPX_VER: '3.96'
-  GH_TOKEN: ${{secrets.GITHUB_TOKEN}}  # Make gh work 
+  GH_TOKEN: ${{secrets.GITHUB_TOKEN}}  # Make gh release upload work 
 
 defaults:
   run:
@@ -50,4 +50,4 @@ jobs:
         pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --upx-dir "$FILE" IORSim_GUI.py
         echo "ASSET=dist/$APP_NAME$EXE#'$RUNNER_OS executable'" >> $GITHUB_ENV
     - name: Upload Asset
-      run: gh release upload ${{ github.event.release.tag_name }} ${{env.ASSET}}
+      run: gh release upload ${{github.event.release.tag_name}} ${{env.ASSET}}
