--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
           echo "$RUNNER_OS not supported"
           exit 1
         fi
-        pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --add-data "upgrader.py" --upx-dir "$UPX_FILE" IORSim_GUI.py
+        pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --add-data "upgrader.py${SEP}." --upx-dir "$UPX_FILE" IORSim_GUI.py
         echo "ASSET=dist/$APP_NAME$EXE#'$RUNNER_OS executable'" >> $GITHUB_ENV
     - name: Upload Asset
       run: gh release upload ${{github.event.release.tag_name}} ${{env.ASSET}}
