--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false                # Do not stop if one build fails
       matrix:
-        os: [ windows-2022, ubuntu-20.04 ubuntu-22.04 ]
+        os: [ windows-2022, ubuntu-20.04, ubuntu-22.04 ]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
