--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false                # Do not stop if one build fails
       matrix:
-        os: [ windows-2022, ubuntu-20.04]
+        os: [ windows-2022, ubuntu-20.04 ]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
@@ -48,6 +48,8 @@ jobs:
           exit 1
         fi
         pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --upx-dir "$UPX_FILE" IORSim_GUI.py
-        echo "ASSET=dist/$APP_NAME$EXE#'${{matrix.os}} executable'" >> $GITHUB_ENV
+        TAG=${{matrix.os}}
+        TAG=_${TAG%-*}
+        echo "ASSET=dist/$APP_NAME$TAG$EXE#'${{matrix.os}} executable'" >> $GITHUB_ENV
     - name: Upload Asset
       run: gh release upload ${{github.event.release.tag_name}} ${{env.ASSET}}
