--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,8 @@ jobs:
         fi
         pyinstaller$EXE --onefile --add-data "guides${SEP}guides" --add-data "icons${SEP}icons" --upx-dir "$UPX_FILE" IORSim_GUI.py
         TAG=${{matrix.os}}
-        TAG=_${TAG%-*}
-        echo "ASSET=dist/$APP_NAME$TAG$EXE#'${{matrix.os}} executable'" >> $GITHUB_ENV
+        NEW_NAME=$APP_NAME_${TAG%-*}
+        mv dist/$APP_NAME$EXE dist/$NEW_NAME$EXE
+        echo "ASSET=dist/$NEW_NAME$EXE#'${{matrix.os}} executable'" >> $GITHUB_ENV
     - name: Upload Asset
       run: gh release upload ${{github.event.release.tag_name}} ${{env.ASSET}}
