--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,5 +53,12 @@ jobs:
         NEW_NAME=${APP_NAME}_${TAG%-*}                # Remove everything after -
         mv -v dist/$APP_NAME$EXE dist/$NEW_NAME$EXE   # Rename pyinstaller generated file
         echo "ASSET=dist/$NEW_NAME$EXE#'${{matrix.os}} executable'" >> $GITHUB_ENV
+    # - name: Tar files
+    #   run: tar -cvf my_files.tar dist
+    # - name: Upload Artifact
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: my-artifact
+    #     path: my_files.tar
     - name: Upload Asset
       run: gh release upload ${{github.event.release.tag_name}} ${{env.ASSET}}
